# rainfall-model

./: README.md  rainfall.cabal
demo/: 01-Transfer.rain  02-Market-Simple.rain  02-Market.rain  03-Market-General.rain  04-Transfer-Split.rain  05-Upgrade.rain  06-Settlement.rain  Auction.hs  Coin.hs  CoinPriv.hs  CoinTransfer.hs  Market.hs
proof/: Base.thy  Dynamic.thy  DynamicLemmas.thy  Example_Auction.thy  Examples.thy  Exp.thy  Market.thy  README.md  ROOT  Rainfall0.thy
src/: Main.hs
src/Core/Exp/: Base.hs  Term.hs
src/Rainfall/: EDSL.hs
src/Rainfall/Core/: Eval.hs  Exp.hs
src/Rainfall/Core/Codec/Text/: Pretty.hs
src/Rainfall/Core/Eval/: Rule.hs  Store.hs  Term.hs
src/Rainfall/Core/Exp/: Base.hs  Compounds.hs  Decl.hs  Patterns.hs  Predicates.hs  Rule.hs  Term.hs
src/Rainfall/Core/Transform/: MapAnnot.hs
src/Rainfall/Main/: Args.hs  Config.hs
src/Rainfall/Main/Mode/: Run.hs
src/Rainfall/Source/: Check.hs  Exp.hs
src/Rainfall/Source/Check/: Base.hs  Decl.hs  Error.hs  Term.hs
src/Rainfall/Source/Codec/Text/: Lexer.hs  Parser.hs  Pretty.hs  Token.hs
src/Rainfall/Source/Codec/Text/Parser/: Base.hs  Decl.hs  Term.hs
src/Rainfall/Source/Exp/: Decl.hs  Name.hs  Term.hs  Type.hs
src/Rainfall/Source/Exp/Decl/: Base.hs
src/Rainfall/Source/Exp/Term/: Base.hs  Patterns.hs
src/Rainfall/Source/Exp/Type/: Base.hs  Patterns.hs
src/Rainfall/Source/Transform/: Lower.hs
test/: Coin.hs
test/01-source/01-lexer/01-simple/: Main.rain
