
name:           rainfall
version:        1.0.0.0
license:        MIT
author:         Ben Lippmeier <benl@ouroborus.net>
maintainer:     Ben Lippmeier <benl@ouroborus.net>
cabal-version:  >= 1.6
synopsis:       Smart Contracts as Authorized Production Rules
build-type:     Simple

executable rainfall
 hs-source-dirs:
        src

 build-depends:
        base,
        containers,
        transformers,
        extra,
        inchworm,
        wl-pprint,
        parsec,
        pretty-show

 ghc-options:
        -Wall
        -Werror
        -Wno-missing-signatures
        -Wno-missing-pattern-synonym-signatures
        -Wno-name-shadowing

 extensions:
        LambdaCase
        PatternGuards
        PatternSynonyms
        ParallelListComp
        OverloadedStrings

 main-is:
        Main.hs

 other-modules:
        Rainfall.Core.Codec.Text.Pretty

        Rainfall.Core.Eval.Rule
        Rainfall.Core.Eval.Store
        Rainfall.Core.Eval.Term
        Rainfall.Core.Eval

        Rainfall.Core.Exp.Base
        Rainfall.Core.Exp.Compounds
        Rainfall.Core.Exp.Patterns
        Rainfall.Core.Exp.Predicates
        Rainfall.Core.Exp.Decl
        Rainfall.Core.Exp.Term
        Rainfall.Core.Transform.MapAnnot
        Rainfall.Core.Exp

        Rainfall.Source.Exp.Decl.Base
        Rainfall.Source.Exp.Decl
        Rainfall.Source.Exp.Term.Base
        Rainfall.Source.Exp.Term.Patterns
        Rainfall.Source.Exp.Term
        Rainfall.Source.Exp.Type.Base
        Rainfall.Source.Exp.Type
        Rainfall.Source.Exp.Type.Patterns
        Rainfall.Source.Exp.Name
        Rainfall.Source.Transform.Lower
        Rainfall.Source.Exp

        Rainfall.Source.Codec.Text.Token
        Rainfall.Source.Codec.Text.Lexer

        Rainfall.Source.Codec.Text.Parser.Decl
        Rainfall.Source.Codec.Text.Parser.Term
        Rainfall.Source.Codec.Text.Parser.Base
        Rainfall.Source.Codec.Text.Parser

        Rainfall.EDSL

        Rainfall.Main.Config
        Rainfall.Main.Args
        Rainfall.Main.Mode.Run




